--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Домашнее задание</title>
     <link rel="stylesheet" href="style.css">
-    <script src="/hw-2.js"></script>
+
 </head>
 <body>
     <div class="top">
@@ -25,5 +25,7 @@
 
         </div>
     </div>
+    <script src="hw-2.js"></script>
+    <script src="hw-3.js"></script>
 </body>
 </html>
