--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Домашнее задание</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -14,13 +17,13 @@
         <button class="top__button">Поехали!</button>
     </div>
     <div class="content">
-        <div class="item item_1">
+        <div class="item item_game1">
             <h2 class="item__heading">Игра 1</h2>
         </div>
-        <div class="item item_2">
+        <div class="item item_game2">
             <h2 class="item__heading">Игра 2</h2>
         </div>
-        <div class="item item_3">
+        <div class="item item_game3">
             <h2 class="item__heading">Игра 3</h2>
 
         </div>
