Внес изменения в адаптивные версии

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <button class="top__button">Поехали!</button>
     </div>
     <div class="content">
-        <div class="item item_game1">
+        <div class="item">
             <h2 class="item__heading">Игра 1</h2>
         </div>
-        <div class="item item_game2">
+        <div class="item">
             <h2 class="item__heading">Игра 2</h2>
         </div>
-        <div class="item item_game3">
+        <div class="item">
             <h2 class="item__heading">Игра 3</h2>
 
         </div>
