--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
         <button class="top__button">Поехали!</button>
     </div>
     <div class="content">
-        <div class="item item_game1">
+        <div class="item">
             <h2 class="item__heading">Игра 1</h2>
         </div>
-        <div class="item item_game2">
+        <div class="item">
             <h2 class="item__heading">Игра 2</h2>
         </div>
-        <div class="item item_game3">
+        <div class="item">
             <h2 class="item__heading">Игра 3</h2>
 
         </div>
     </div>
-    <script src="hw-2.js"></script>
-    <script src="hw-3.js"></script>
 </body>
 </html>
