Добавил дополнительный блок,и все сломалось в адап

--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
 
         </div>
     </div>
+    <div class="afterContent">
+        <div class="active">
+            <h1 class="active__heading">Времена года!</h1>
+            <p class="active__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
+            <button class="active__button">Играть!</button>
+        </div>
+        <div class="vector">     
+            <img class="bigImage" src="img/Image.svg" alt="imagePlay">
+            <img class="smallImage" src="img/ImageMobile.svg" alt="imagePlayMobile">    
+        </div>
+    </div>
 </body>
 </html>
