Все задания по JS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button class="top__button">Поехали!</button>
     </div>
     <div class="content">
-        <div class="item">
+        <div class="item" onclick="showQuestion()">
             <h2 class="item__heading">Игра 1</h2>
         </div>
         <div class="item">
@@ -39,5 +39,6 @@
             <img class="smallImage" src="img/ImageMobile.svg" alt="imagePlayMobile">    
         </div>
     </div>
+    <script src="hw-5_1.js"></script>
 </body>
 </html>
