Добавил функцию к кнопке "Играть"

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="active">
             <h1 class="active__heading">Времена года!</h1>
             <p class="active__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
-            <button class="active__button">Играть!</button>
+            <button class="active__button" onclick="season()">Играть!</button>
         </div>
         <div class="vector">     
             <img class="bigImage" src="img/Image.svg" alt="imagePlay">
