Выполнены все задания, кроме 2-го

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         </div>
     </div>
-    <div class="afterContent">
+    <div class="firstGame">
         <div class="active">
             <h1 class="active__heading">Времена года!</h1>
             <p class="active__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
@@ -39,6 +39,18 @@
             <img class="smallImage" src="img/ImageMobile.svg" alt="imagePlayMobile">    
         </div>
     </div>
+    <div class="secondGame">
+        <div class="active">
+            <h1 class="active__heading">Запомни слова</h1>
+            <p class="active__text">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.</p>
+            <button class="active__button" onclick="rememberWords()">Играть!</button>
+        </div>
+        <div class="vector">     
+            <img class="bigImage" src="img/word_GameBIG.svg" alt="imagePlay">
+            <img class="smallImage" src="img/word_GameSMALL.svg" alt="imagePlayMobile">    
+        </div>
+    </div>
     <script src="hw-5_1.js"></script>
+    <script src="hw-7_1.js"></script>
 </body>
 </html>
